added command-line maven support and updated readme

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <build>
     <plugins>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -15,6 +16,17 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.6.0</version>
+        <configuration>
+          <mainClass>Main</mainClass>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
   <packaging>jar</packaging>
@@ -43,4 +55,6 @@
 
 
   </dependencies>
+
+
 </project>
